--- a/mean/public/modules/worklist/css/worklist.css
+++ b/mean/public/modules/worklist/css/worklist.css
@@ -6,18 +6,48 @@ a:hover{
     cursor: pointer;
 }
 
+.stage{
+    margin-bottom: 20px;
+    box-shadow: -1.5px 1.5px 5px rgba(0, 0, 0, 0.12);
+    border: 1px solid #dde;
+}
+
+/***************************************************/
+/************ Stage removal animation **************/
+
+/*
+(the element's css at the beginning of the transition)
+*/
+.stage.ng-leave{
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
+    transition-delay: 0s !important;
+    overflow: hidden;
+    visibility: hidden;
+    max-height: 105px;
+}
+
+/*
+(what the element will animate towards))
+*/
+.stage.ng-leave.ng-leave-active{
+    max-height: 0;
+    margin-bottom: 0;
+}
+
+
+/***************************************************/
+
 .stageHeader{
-    border-top: 1px solid #A3A3A3;
-    border-right: 1px solid #A3A3A3;
-    border-left: 1px solid #A3A3A3;
     border-spacing: 0;
     border-collapse: collapse;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 .platesHeader{
     border-top: 1px solid #ddd;
-    border-right: 1px solid #A3A3A3;
-    border-left: 1px solid #A3A3A3;
     border-spacing: 0;
     border-collapse: collapse;
     text-align: center;
@@ -33,33 +63,27 @@ a:hover{
     background: #f9f9f9;
 }
 
-
-.aPlate{
-    border-top: 1px solid #ddd;
-    border-right: 1px solid #A3A3A3;
-    border-left: 1px solid #A3A3A3;
-}
-
 .aPlate:hover{
     background-color: #f5f5f5;
     cursor: pointer;
+}
+
+.aPlate .removeButton{
+    border-bottom: 1px solid #dde;
 }
 
 .performButton{
     float: right;
 }
 
-.row.aPlate:last-of-type{
-    border-bottom: 1px solid #A3A3A3;
-    border-left: 1px solid #A3A3A3;
-    border-right: 1px solid #A3A3A3;
-}
+/***************************************************/
+/************ Plate removal animation **************/
 
 .row.aPlate.ng-leave{
-    -webkit-transition:all ease 0.3s;
-    -moz-transition:all ease 0.3s;
-    -o-transition:all ease 0.3s;
-    transition:all ease 0.3s;
+    -webkit-transition:all ease 0.12s;
+    -moz-transition:all ease 0.12s;
+    -o-transition:all ease 0.12s;
+    transition:all ease 0.12s;
     overflow: hidden;
     visibility: hidden;
 }
@@ -67,6 +91,7 @@ a:hover{
 /*
 (what the element will animate from)
 */
+
 .row.aPlate.ng-leave{
     max-height: 40px;
     opacity: 1;
@@ -75,12 +100,11 @@ a:hover{
 /*
 (what the element will animate towards))
 */
+
 .row.aPlate.ng-leave.ng-leave-active{
     max-height: 0;
     opacity: 0;
 }
-
-
 
 /***************************************************/
 
@@ -113,3 +137,8 @@ remove button
     padding: 8px 0 8px 0;
     overflow: hidden;
 }
+
+.stageBody{
+    width: 100%;
+}
+
