Viewplate button css

--- a/mean/public/modules/plates/css/plates.css
+++ b/mean/public/modules/plates/css/plates.css
@@ -104,3 +104,8 @@
 .tab:hover{
     cursor: pointer;
 }
+
+.viewPlateButton.ngdialog-button.ngdialog-button-secondary{
+    padding-right: 4px;
+    padding-left: 4px;
+}
