Click anywhere on a worklist plate's row to check checkbox
Users can now click anywhere on a plate's row in the worklist to
select a plate and check the checkbox. Originally when users would
click in the column where the checkbox is, but not on the checkbox,
nothing would happen.

--- a/mean/public/modules/worklist/css/worklist.css
+++ b/mean/public/modules/worklist/css/worklist.css
@@ -120,7 +120,7 @@ remove button
 /********************************/
 
 .platesHeader > div, .aPlate > div{
-    transition: width linear 0.1s, padding linear 0.1s, margin linear 0.1s;
+    transition: width ease 0.1s, padding ease 0.1s, margin linear 0.1s;
     transform: translateZ(0);
 }
 
